--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <h1 class="progress-bar-no-entry">Notepad-Service</h1>
           <h4 class="progress-bar-no-entry">ehem. Wishlist-Service</h4>
           <aside class="notes">
-            - 14 Monate RedTecLab GmbH <br />
+            - 16 Monate RedTecLab GmbH <br />
             - Notepad-Service <br />
             - ehem. Wishlist-Service <br />
           </aside>
@@ -548,10 +548,10 @@
                   Standard
                 </li>
                 <li class="fragment" data-fragment-index="1">
-                  JSON/YML For mat &rArr; Maschinenlesbar
+                  JSON/YML Format &rArr; Maschinenlesbar
                 </li>
                 <li class="fragment" data-fragment-index="1">
-                  Objektbeschr eibung als JSON-Schema
+                  Objektbeschreibung als JSON-Schema
                 </li>
               </ul>
             </div>
@@ -671,11 +671,11 @@
             </li>
             <li id="s11-2" class="fragment" data-fragment-index="6">
               Koa Middleware als Eventhandle<br />
-              <span>&rArr; Reichern HTTP context an</span> <br />
-              <span>&rArr; Entscheiden über weitergabe</span>
+              <span>&rArr; Reichern HTTP-Context an</span> <br />
+              <span>&rArr; Entscheiden über Weitergabe</span>
             </li>
             <li id="s11-3" class="fragment" data-fragment-index="7">
-              Trennung von DB-Zugriff un -Verbindung
+              Trennung von DB-Zugriff und -Verbindung
             </li>
           </ul>
           <div
@@ -1253,13 +1253,13 @@
 
 
             <div class="fragment" style="color: green;" data-fragment-index="1"> &check; </div>
-            <div class="fragment" data-fragment-index="1"> Lauffähige und Bereitgestellte Anwendung </div>
+            <div class="fragment" data-fragment-index="1"> Lauffähige und bereitgestellte Anwendung </div>
             <div class="fragment" style="color: green;" data-fragment-index="2"> &check; </div>
             <div class="fragment" data-fragment-index="2"> Zeitplanung inklusive Puffer konnte eingehalten werden </div>
             <div class="fragment" style="color: green;" data-fragment-index="3"> &check; </div>
             <div class="fragment" data-fragment-index="3"> Qualitätsziele erreicht </div>
-            <div class="fragment" style="color: green;" data-fragment-index="4"> &check; </div>
-            <div class="fragment" data-fragment-index="4"> Folgeprojekte Konnten noch nicht angegangen werden </div>
+            <div class="fragment" style="color: #f00000;" data-fragment-index="4"> &cross; </div>
+            <div class="fragment" data-fragment-index="4"> Folgeprojekte konnten noch nicht angegangen werden </div>
           </div>
         </section>
 
@@ -1281,7 +1281,7 @@
             >
               &CircleMinus;
             </div>
-            <div class="fragment" data-fragment-index="1">Dokumente</div>
+            <div class="fragment" data-fragment-index="1">Projektzuschnitt</div>
             <div
               class="fragment"
               data-fragment-index="2"
@@ -1303,7 +1303,7 @@
             >
               Lessons:
             </div>
-            <div class="fragment" data-fragment-index="3">Kiss + MVP</div>
+            <div class="fragment" data-fragment-index="3">KISS + MVP</div>
             <div
               class="fragment"
               data-fragment-index="4"
